Fix getFirst() call error